--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -114,7 +114,13 @@ button.active {
   height: calc(100% - 52px);
 }
 
-.payment-voucher-wrapper  mat-card > mat-card-content,
+.supplier-invoice-wrapper > mat-card > mat-card-content,
+.payment-voucher-wrapper > mat-card > mat-card-content,
 .payment-wrapper mat-card > mat-card-content {
   height: calc(100% - 110px);
+}
+
+.supplier-invoice-wrapper > mat-card,
+.payment-voucher-wrapper > mat-card {
+  min-width: 40%;
 }
