--- a/ng-app/src/app/inventory/stock-transaction-form/stock-transaction-form.component.html
+++ b/ng-app/src/app/inventory/stock-transaction-form/stock-transaction-form.component.html
@@ -1,3 +1,2 @@
-<p>
-  stock-transaction-form works!
-</p>
+<app-standard-form title="Stock Transaction" domainName="stock-transaction" [fields]="fields" [includes]="includes" [(dataSource)]="formData" [callback]="true" (submitFunc)="onSubmit($event)"></app-standard-form>
+
