stock-item view page + standard display component

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -124,3 +124,8 @@ button.active {
 .payment-voucher-wrapper > mat-card {
   min-width: 40%;
 }
+
+.table.table-bordered tr:hover {
+  background-color: #ededed;
+  cursor: pointer;
+}
