--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -129,3 +129,28 @@ button.active {
   background-color: #ededed;
   cursor: pointer;
 }
+
+/* qrcode css */
+::ng-deep .qr-scan-area{
+    position: relative;
+}
+::ng-deep .qr-scan-area zxing-scanner {
+      max-width: 100%;
+    }
+
+    .qr-area {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100% - 50px);
+      top: 0;
+      width: 100%;
+    }
+    .qr-area .area {
+        height: 200px;
+        width: 200px;
+        border: 2px solid red;
+      }
+    
+  
