--- a/ng-app/src/app/attendee/payment-form/payment-form.component.html
+++ b/ng-app/src/app/attendee/payment-form/payment-form.component.html
@@ -1,2 +1,3 @@
 <app-standard-form title="Payment" domainName="payment" [fields]="fields" [includes]="includes" [(dataSource)]="formData"></app-standard-form>
+<!-- <pre>PAID: {{paidAmount}}</pre> -->
 
