set min width for payment mat-card

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -112,6 +112,7 @@ button.active {
 
 .payment-wrapper mat-card {
   height: calc(100% - 52px);
+  min-width: 30%;
 }
 
 .supplier-invoice-wrapper > mat-card > mat-card-content,
